--- a/Branch.App/Areas/Halo4/Views/History/Campaign.cshtml
+++ b/Branch.App/Areas/Halo4/Views/History/Campaign.cshtml
@@ -15,62 +15,68 @@
 	var gameHistory = Model.GameHistory;
 }
 
-<div class="col-md-9">
+<div class="col-md-10">
 	<div class="bs-branch-section overview">
 		<div class="page-header">
 			<h1>Campaign History</h1>
 		</div>
-
-		<table class="table game-history">
-			<thead>
-				<tr>
-					<th>Mission</th>
-					<th>Standing</th>
-					<th>Difficulty</th>
-					<th>Type</th>
-					<th>Date</th>
-					<th>Game Length</th>
-				</tr>
-			</thead>
-
-			<tbody>
-				@foreach (var game in gameHistory.Games)
-				{
-					<tr class="history-row ">
-						<td>
-							@Html.RouteLink(game.MapName, "Halo4_Game",
-								new { gamertag = BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag), id = game.Id })
-						</td>
-
-						<td>
-							@GeneralHelpers.GetGameVictoryStatus(game.Result, game.Completed).Item2
-						</td>
-						<td>
-							@MetadataHelpers.GetDifficultyInfo(game.Difficulty).Name
-						</td>
-						<td>
-							@(game.SinglePlayer ? "Single Player" : "Co Op")
-						</td>
-						<td>
-							@BranchHelpers.MakeDateTimeFriendly(game.EndDateUtc, "d")
-						</td>
-						<td>
-							@game.Duration.ToString()
-						</td>
+		
+		@if (Model.GameHistory.Games.Any())
+		{
+			<table class="table game-history">
+				<thead>
+					<tr>
+						<th>Mission</th>
+						<th>Standing</th>
+						<th>Difficulty</th>
+						<th>Type</th>
+						<th>Date</th>
+						<th>Game Length</th>
 					</tr>
-				}
-			</tbody>
+				</thead>
 
-		</table>
+				<tbody>
+					@foreach (var game in gameHistory.Games)
+					{
+						<tr class="history-row ">
+							<td>
+								@Html.RouteLink(game.MapName, "Halo4_Game",
+									new {gamertag = BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag), id = game.Id})
+							</td>
+
+							<td>
+								@GeneralHelpers.GetGameVictoryStatus(game.Result, game.Completed).Item2
+							</td>
+							<td>
+								@MetadataHelpers.GetDifficultyInfo(game.Difficulty).Name
+							</td>
+							<td>
+								@(game.SinglePlayer ? "Single Player" : "Co Op")
+							</td>
+							<td>
+								@BranchHelpers.MakeDateTimeFriendly(game.EndDateUtc, "d")
+							</td>
+							<td>
+								@game.Duration.ToString()
+							</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		}
+		else
+		{
+			<h6>
+				There are no more Campaign Games in @BranchHelpers.CheckGamertagPrivacy(Model.ServiceRecord.Gamertag)'s Game History
+			</h6>
+		}
 
 		<ul class="pager">
-			<li class="previous
-				<%= 'disabled' if page == 0 %> ">
-				<%= link_to('← Newer', halo4_gamehistory_path( sub_view: sub_view, page: update_pagination(page, 'older'))) %>
+			<li class="previous @(Model.Page == 0 ? "disabled" : "")">
+				@Html.RouteLink("← Newer", "Halo4_History", new { page = Model.Page - 1 })
 			</li>
-			<li class="next
-				<%= 'disabled' if is_last_page %>">
-				<%= link_to('Older →', halo4_gamehistory_path( sub_view: sub_view, page: update_pagination(page, 'newer'))) %>
+			<li class="next @(Model.GameHistory.Games.Any() ? "" : "disabled")">
+				@Html.RouteLink("Older →", "Halo4_History", new { page = Model.Page + 1 })
 			</li>
 		</ul>
 	</div>
