--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
 				<div class="row">
 					<div class="col-md-10">
 						<p>Developed by <a href="http://twitter.com/alexerax" target="_blank">&#64;alexerax</a>.</p>
+						<p>Developed in C# | ASP.NET on Windows Azure</p>
 						<p>Code licensed under the <a href="http://www.dbad-license.org/" target="_blank">Don't Be A Dick</a> Public License.</p>
 						<p>&copy; @DateTime.Now.Year - Branch</p>
 						<ul class="footer-links">
